@@ -1,5 +1,10 @@
 2009-07-14  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* objfiles.c (objfile_relocate): Do not relocate the same
+	BLOCKVECTOR_MAP address map multiple times.
+
+2009-07-14  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* remote.c (process_stop_reply): Access expedited target registers
 	in target_gdbarch.
 
